Supposedly finished Combinations but still have some testing to do

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /.metadata/
+/DistributionCalculator\src\distributionsTypes/ComboTests/
+/DistributionCalculator\src\distributionsTypes/CombinationsTests/
