Hopefully moved all the tests to a file and put that file in the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
 /.metadata/
-/DistributionCalculator\src\distributionsTypes/ComboTests/
-/DistributionCalculator\src\distributionsTypes/CombinationsTests/
+distributionTypesTests
